2005-02-23  Paul Stevens <paul@nfg.nl>

	* check_dbmail.h: use separate config in /etc/dbmail/dbmail-test.conf
	for test-cases.
	* imaputil.c (perform_imap_search): return if setlen is zero.
	* imapcommands.c (_ic_login): return if authentication fails.
	* dbmail_imapsession.c (dbmail_imap_session_mailbox_open): send tagged
	NO response to client if mailbox doesn't exists.
	* db.c, misc.c: string cleanups in mailbox_add_namespace.
	* sql/sqlite/create_tables.sqlite: fixed dbmail_acl_constraint_update
	trigger.
	* debian/rules, debian/control: added support for sqlite based debian
	packages.

2005-02-18  Paul Stevens <paul@nfg.nl>

	* pop3d.c, imapd.c, lmtpd.c, server.c, serverchild.c: added
	non-forking support for inetd users, aka cli-server.
	* dbmail.h, auth/authldap.c: moved GETCONFIGVALUE macro to dbmail.h


2005-02-18  Paul Stevens <paul@nfg.nl>

	* sqlite/dbsqlite.c: added initial sqlite support provided by Geo
	Carncross. Also fixed the autoconf files to support this.
	* user.c: remove percentage from user listing.
	* dbmail.schema: added uidNumber to MUST fields in dbmailUser.

2005-02-14  Paul Stevens <paul@nfg.nl>

	* create_tables_innoDB.mysql, create_tables.pgsql, migrate_from_1.x_to_2.0.mysql, 
	migratie_from_1.x_to_2.0.pgsql: added ON UPDATE CASCADE to all foreign keys.
	* Makefile.am, acinclude.m4: define AUTHLDAP for authldap builds.
	* auth.h, check_dbmail_deliver.c, db.c, db.h, dbmail-imapsession.c,
	auth/authldap.c, auth/authsql.c: authldap is now feature complete.
	* dbmail.schema: ldap schema file which defines dbmailUser and
	dbmailForwardingAddress objects.
	* dbmail.conf: LDAP stanza included.

2005-02-07  Paul Stevens <paul@nfg.nl>

	* auth.h, auth/authsql.c, auth/authldap.c: first wave of authldap
	fixes. 
	* check_dbmail_deliver.c: implement testcases for auth.h api. The rest
	of the tests for the delivery chain is still todo.
	* user.c: change output from dbmail-users -l to make it machine
	parseable and emulate unix getent standard.