@@ -36,7 +36,6 @@ INCLUDES = -I$(top_srcdir)
 dbmail_smtp_SOURCES = main.c
 dbmail_smtp_LDADD = libdbmail.la
 
-
 dbmail_pop3d_SOURCES = pop3.c pop3d.c
 dbmail_pop3d_LDADD = libdbmail.la
 
@@ -70,23 +69,23 @@ TESTS=check_dbmail_common check_dbmail_server check_dbmail_deliver check_dbmail_
 noinst_PROGRAMS=$(TESTS)
 
 check_dbmail_common_SOURCES=$(COMMON) check_dbmail_common.c
-check_dbmail_common_LDADD=$(dbmail_users_LDADD) @CHECK_LIBS@
+check_dbmail_common_LDADD=@CHECK_LIBS@ libdbmail.la
 check_dbmail_common_INCLUDES=@CHECK_CFLAGS@
 
 check_dbmail_server_SOURCES=$(COMMON) $(SERVER) check_dbmail_server.c
-check_dbmail_server_LDADD=$(dbmail_users_LDADD) @CHECK_LIBS@
+check_dbmail_server_LDADD=@CHECK_LIBS@ libdbmail.la
 check_dbmail_server_INCLUDES=@CHECK_CFLAGS@
 
 check_dbmail_deliver_SOURCES=$(COMMON) $(DELIVER) check_dbmail_deliver.c
-check_dbmail_deliver_LDADD=$(dbmail_users_LDADD) @CHECK_LIBS@
+check_dbmail_deliver_LDADD=@CHECK_LIBS@ libdbmail.la
 check_dbmail_deliver_INCLUDES=@CHECK_CFLAGS@
 
 check_dbmail_message_SOURCES=$(COMMON) $(DELIVER) check_dbmail_message.c
-check_dbmail_message_LDADD=$(dbmail_users_LDADD) @CHECK_LIBS@
+check_dbmail_message_LDADD=@CHECK_LIBS@ libdbmail.la
 check_dbmail_message_INCLUDES=@CHECK_CFLAGS@
 
 check_dbmail_imapd_SOURCES=$(COMMON) $(SERVER) quota.c imap4.c imaputil.c imapcommands.c memblock.c rfcmsg.c dbsearch.c dbmsgbuf.c acl.c dbmail-imapsession.c check_dbmail_imapd.c
-check_dbmail_imapd_LDADD=$(dbmail_imapd_LDADD) @CHECK_LIBS@
+check_dbmail_imapd_LDADD=@CHECK_LIBS@ libdbmail.la
 check_dbmail_imapd_INCLUDES= @CHECK_CFLAGS@
 
 endif
