@@ -12,6 +12,7 @@ export DH_COMPAT=3
 #export WITH_GC="--with-gc"
 export WITH_CHECK=--with-check
 export NOSHARED=--enable-shared=no
+#export NOSTATIC=--enable-static=no
 
 CFLAGS = -Wall -O1
 LDFLAGS = -lcrypt
@@ -40,7 +41,8 @@ include /usr/share/dpatch/dpatch.make
 
 CONFFLAGS=--host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
 	--prefix=/usr --mandir=\$${prefix}/share/man --sysconfdir=/etc/dbmail/ \
-	--infodir=\$${prefix}/share/info $(WITH_GC) $(WITH_CHECK) $(NOSHARED)
+	--infodir=\$${prefix}/share/info \
+	$(WITH_GC) $(WITH_CHECK) $(NOSHARED) $(NOSTATIC)
 
 build: stamps/build
 stamps/build: stamps patch configure $(PACKAGES)
