@@ -16,7 +16,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-pkglib_LTLIBRARIES = libsortdbmail.la
+noinst_LTLIBRARIES = libsortdbmail.la
 INCLUDES = -I$(top_srcdir)
 
 if SIEVE
